@@ -39,11 +39,14 @@ public class ConnectionHelper {
 	private static Context mContext;
 	public static String authCookie;
 	public static String PNAAuthCookie;
+	public static String bbAuthCookie;
+	private static boolean bbCookieHasBeenSet = false;
 	private static boolean PNACookieHasBeenSet = false;
 	private static boolean cookieHasBeenSet = false;
+	private static boolean bbLoggedIn = false;
 	private static boolean PNALoggedIn = false;
 	private static boolean loggedIn = false;
-	public static boolean logindone=false, pnalogindone=false;
+	public static boolean logindone=false, pnalogindone=false, bbLoginDone=false;
 	public static boolean loggingIn=false;
 	
 	public ConnectionHelper(Context c)
@@ -62,10 +65,36 @@ public class ConnectionHelper {
 	    
 	    return client;
 	}
+	public boolean bbLogin(Context con, DefaultHttpClient client)
+	{
+		settings = PreferenceManager.getDefaultSharedPreferences(con);
+		HttpPost httppost = new HttpPost("https://courses.utexas.edu/webapps/login/");
+		try {
+		       
+			 // Add your data
+		    	List<NameValuePair> nameValuePairs = new ArrayList<NameValuePair>(2);
+		
+		        nameValuePairs.add(new BasicNameValuePair("user_id", settings.getString("eid","error").trim()));
+		        nameValuePairs.add(new BasicNameValuePair("password", settings.getString("password","error")));
+		        
+		        httppost.setEntity(new UrlEncodedFormEntity(nameValuePairs,HTTP.ASCII));
+
+		        // Execute HTTP Post Request
+		        HttpResponse response = client.execute(httppost);
+
+		   
+		    } catch (Exception ex) {
+		    	
+		    	bbLoggedIn = false;
+		        return false;
+		    }
+		    
+		   bbLoggedIn = true; 
+		   return true;
+	}
 	public boolean Login(Context con, DefaultHttpClient client)
 	{
 		settings = PreferenceManager.getDefaultSharedPreferences(con);
-//		client.getCookieStore().clear();
 		HttpPost httppost = new HttpPost("https://utdirect.utexas.edu/security-443/logon_check.logonform");
 		try {
 		       
@@ -84,9 +113,6 @@ public class ConnectionHelper {
 		    } catch (Exception ex) {
 		    	
 		    	loggedIn = false;
-		    	
-		//    	Toast.makeText(con, "There was an error while connecting to UTDirect, please check your internet connection and try again", Toast.LENGTH_LONG).show();
-		//        Log.e("Error connecting to utexas.edu", ex.toString());// TODO Auto-generated catch block	
 		        return false;
 		    }
 		    
@@ -114,7 +140,6 @@ public class ConnectionHelper {
 	public boolean PNALogin(Context con, DefaultHttpClient client)
 	{
 		settings = PreferenceManager.getDefaultSharedPreferences(con);
-	//	client.getCookieStore().clear();
 		HttpPost httppost = new HttpPost("https://management.pna.utexas.edu/server/graph.cgi");
 		try {
 		       
@@ -174,6 +199,11 @@ public class ConnectionHelper {
 		PNAAuthCookie = cookie;
 		PNACookieHasBeenSet = true;
 	}
+	public static void bbSetAuthCookie(String cookie)
+	{
+		bbAuthCookie = cookie;
+		bbCookieHasBeenSet = true;
+	}
 	public static String getAuthCookie(Context con, DefaultHttpClient client )
 	{
 		//settings = PreferenceManager.getDefaultSharedPreferences(con);
@@ -204,11 +234,44 @@ public class ConnectionHelper {
 			return authCookie;
 		}
 	}
+	public static String getBBAuthCookie(Context con, DefaultHttpClient client )
+	{
+		if(!bbCookieHasBeenSet)
+		{
+			List<Cookie> cooklist = client.getCookieStore().getCookies();
+		    	
+		    	for(int i = 0; i<cooklist.size(); i++)
+		    	{
+		    	//	Log.d("COOKIE", cooklist.get(i).getValue()+"");
+		    		if(cooklist.get(i).getName().equals("s_session_id"))
+		    		{	
+		    			bbAuthCookie = cooklist.get(i).getValue();
+		    			bbCookieHasBeenSet = true;
+		    			return bbAuthCookie;
+		    		}
+		    	}
+		    	
+	//	    	Log.e("CREDS", "Error authenticating credentials");
+				Toast.makeText(con, "Something went wrong during Blackboard login, try checking your UT EID and Password and try again.", Toast.LENGTH_LONG).show();
+				Log.d("BBCOOKIE", "Login failed");
+				return "";
+		}
+		else
+		{
+			return bbAuthCookie;
+		}
+	}
 	public static void resetCookie()
 	{
 		authCookie = "";
 		loggedIn = false;
 		cookieHasBeenSet = false;
+	}
+	public static void resetBBCookie()
+	{
+		bbAuthCookie = "";
+		bbLoggedIn = false;
+		bbCookieHasBeenSet = false;
 	}
 	public static void setAuthCookie(String cookie)
 	{
@@ -225,10 +288,14 @@ public class ConnectionHelper {
 	{
 		authCookie = "";
 		PNAAuthCookie = "";
+		bbAuthCookie="";
+		bbCookieHasBeenSet = false;
 		PNACookieHasBeenSet = false;
+		cookieHasBeenSet = false;
 		PNALoggedIn = false;
 		loggedIn = false;
-		cookieHasBeenSet = false;
+		bbLoggedIn = false;
+		
 	}
 	public static boolean cookieHasBeenSet()
 	{
@@ -237,6 +304,10 @@ public class ConnectionHelper {
 	public static boolean PNACookieHasBeenSet()
 	{
 		return PNACookieHasBeenSet;
+	}
+	public static boolean bbCookieHasBeenSet()
+	{
+		return bbCookieHasBeenSet;
 	}
 	public class loginTask extends AsyncTask<Object,Integer,Boolean>
 	{
@@ -271,7 +342,10 @@ public class ConnectionHelper {
 			{
     		case 1:
     			Toast.makeText(context, "There was an error while connecting to UTDirect, please check your internet connection and try again", Toast.LENGTH_LONG).show();
+    			loggingIn=false;
+    			((SherlockActivity)(context)).invalidateOptionsMenu();
     			cancelProgressBar();
+    			
 				break;
     		case 0:break;
 			}
@@ -281,12 +355,12 @@ public class ConnectionHelper {
 		{
 			logindone = b;
 			
-			if(logindone && pnalogindone && !isCancelled())
+			if(logindone && pnalogindone && bbLoginDone && !isCancelled())
 			{
-				logindone = false;pnalogindone = false;
+				logindone = false;pnalogindone = false;bbLoginDone=false;
 				loggingIn=false;
 				
-				if(!ConnectionHelper.getAuthCookie(context, httpclient).equals("") && !ConnectionHelper.getPNAAuthCookie(context, pnahttpclient).equals(""))
+				if(!ConnectionHelper.getAuthCookie(context, httpclient).equals("") && !ConnectionHelper.getPNAAuthCookie(context, pnahttpclient).equals("") && !ConnectionHelper.getBBAuthCookie(context, httpclient).equals(""))
 				 {
 					Toast.makeText(context, "You're now logged in; feel free to access any of the app's features", Toast.LENGTH_LONG).show();
 					
@@ -330,7 +404,10 @@ public class ConnectionHelper {
 			{
     			case 1:
     				Toast.makeText(context, "There was an error while connecting to UT PNA, please check your internet connection and try again", Toast.LENGTH_LONG).show();
+    				loggingIn=false;
+    				((SherlockActivity)(context)).invalidateOptionsMenu();
     				cancelProgressBar();
+    				
     				break;
     			case 0:break;
 			}
@@ -348,15 +425,15 @@ public class ConnectionHelper {
 		{
 			pnalogindone = b;
 			
-			if(logindone && pnalogindone && !isCancelled())
+			if(logindone && pnalogindone && bbLoginDone && !isCancelled())
 			{
-				logindone = false;pnalogindone = false;
+				logindone = false;pnalogindone = false;bbLoginDone=false;
 				loggingIn=false;
 				
-				if(!ConnectionHelper.getAuthCookie(context, httpclient).equals("") && !ConnectionHelper.getPNAAuthCookie(context, pnahttpclient).equals(""))
-				{
+				if(!ConnectionHelper.getAuthCookie(context, httpclient).equals("") && !ConnectionHelper.getPNAAuthCookie(context, pnahttpclient).equals("") && !ConnectionHelper.getBBAuthCookie(context, httpclient).equals(""))
+				 {
 					Toast.makeText(context, "You're now logged in; feel free to access any of the app's features", Toast.LENGTH_LONG).show();
-				
+					
 					edit.putBoolean("loggedin", true);
 					edit.commit();
 					
@@ -374,5 +451,76 @@ public class ConnectionHelper {
 		}
 		
 	}
-    
+    public class bbLoginTask extends AsyncTask<Object,Integer,Boolean>
+	{
+		
+		DefaultHttpClient pnahttpclient;
+		DefaultHttpClient httpclient;
+		Editor edit;
+		Context context;
+    	
+    	public bbLoginTask(Context con, DefaultHttpClient httpclient, DefaultHttpClient pnahttpclient)
+		{
+    		settings = PreferenceManager.getDefaultSharedPreferences(con);
+    		this.httpclient = httpclient;
+			this.pnahttpclient = pnahttpclient;
+			edit = settings.edit();
+			this.context = con;
+			
+		}
+    	@Override
+    	protected Boolean doInBackground(Object... params)
+		{
+			loggingIn=true;
+    		boolean loginStatus = ((ConnectionHelper)params[0]).bbLogin(context, (DefaultHttpClient)httpclient);
+			publishProgress(loginStatus?0:1);
+			return loginStatus;		
+		}
+    	@Override
+		protected void onProgressUpdate(Integer... progress)
+		{
+			
+    		switch(progress[0])
+			{
+    		case 1:
+    			Toast.makeText(context, "There was an error while connecting to Blackboard, please check your internet connection and try again", Toast.LENGTH_LONG).show();
+    			loggingIn=false;
+    			((SherlockActivity)(context)).invalidateOptionsMenu();
+    			cancelProgressBar();
+    			
+				break;
+    		case 0:break;
+			}
+		}
+		@Override
+		protected void onPostExecute(Boolean b)
+		{
+			bbLoginDone = b;
+			
+			if(logindone && pnalogindone && bbLoginDone && !isCancelled())
+			{
+				logindone = false;pnalogindone = false;bbLoginDone=false;
+				loggingIn=false;
+				
+				if(!ConnectionHelper.getAuthCookie(context, httpclient).equals("") && !ConnectionHelper.getPNAAuthCookie(context, pnahttpclient).equals("") && !ConnectionHelper.getBBAuthCookie(context, httpclient).equals(""))
+				 {
+					Toast.makeText(context, "You're now logged in; feel free to access any of the app's features", Toast.LENGTH_LONG).show();
+					
+					edit.putBoolean("loggedin", true);
+					edit.commit();
+					
+				 }
+				((SherlockActivity)(context)).invalidateOptionsMenu();
+				cancelProgressBar();
+			}
+		}
+		private void cancelProgressBar()
+		{
+			if(context.getClass().equals(UTilitiesActivity.class))
+				((SherlockActivity)context).setSupportProgressBarIndeterminateVisibility(false);
+			else if(context.getClass().equals(Preferences.class))
+				((SherlockPreferenceActivity)context).setSupportProgressBarIndeterminateVisibility(false);
+		}
+		
+	}
 }
